graphql/src/__tests__/__snapshots__/index.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles syntax errors correctly 1`] = `
Array [
  Array [
    "[31m[1m E [22m[39mGraphQLError: Syntax Error GraphQL request (1:2) Expected Name, found <EOF>
   
   1: {
       ^
   ",
  ],
]
`;
